<?xml version="1.0"?>
<package format="2">
  <name>cpds</name>
  <version>0.1.0</version>
  <description>cpds</description>
  <maintainer email="hannes.friederich@wysszurich.ch">Hannes Friederich</maintainer>

  <license>See package</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>yaml_cpp_catkin</depend>
</package>
